# FBP-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IDEA.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py  0002_indexes_and_constraints.py
app/: main.py
app/auth/: dependencies.py  jwt.py
app/core/: config.py  database.py
app/engine/: _isolation_forest_stub.py  anomaly.py  calculations.py  models.py  rule_engine.py
app/models/: __init__.py  health_facility.py  payment.py  quality_checklist_item.py  quality_evaluation.py  quantity_declaration.py  quantity_indicator.py  quarterly_declaration.py  rule_set.py  user.py  verification_audit.py
app/routers/: auth.py  declarations.py  facilities.py  imports.py  indicators.py  reports.py
app/schemas/: audit.py  auth.py  declaration.py  health_facility.py  indicator.py  payment.py  quality.py  quantity.py  rule_set.py
app/seed/: checklist.py  facilities.py  indicators.py  runner.py
app/services/: __init__.py  anomaly_service.py  declaration_service.py  facility_service.py  payment_service.py  report_service.py
docs/: API.md  ARCHITECTURE.md  PBF_METHODOLOGY.md
frontend/src/: App.jsx  api.js  index.css
scripts/: create_admin.py  seed_db.py
tests/: conftest.py
tests/integration/: test_golden_quarterly_cycle.py
tests/property/: test_payment_properties.py
tests/unit/: test_anomaly_detection.py  (+4 more)
(+10 files in other folders)
