[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fbp-engine"
version = "0.1.0"
description = "Performance-Based Financing engine for health facilities (PBF/FBP)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["pbf", "fbp", "health", "financing", "mauritania"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/seed/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
